updating the latest

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,34 @@
 spring.application.name=ADProject
+#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://47.130.87.217:3306/DineWise
+spring.datasource.username=ycroot
+spring.datasource.password=root
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#pp.jwt.secret=your_super_secret_key
+
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=60000
+spring.data.redis.password=Poe2
+
+spring.mail.username=poepoebornon95@gmail.com
+spring.mail.password=ygrv bskm ciby eneq
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/adproject?useSSL=false&serverTimezone=Asia/Singapore
-spring.datasource.username=root
-spring.datasource.password=12345Abc*
+#spring.datasource.url=jdbc:mysql://localhost:3306/dinewise
+#spring.datasource.username=root
+#spring.datasource.password=12345Abc*
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-pp.jwt.secret=your_super_secret_key
